* Fixed issue with enrolling a student to a paid course (paid via PayPal chained payments)
* Fixed issue with mandatory, assessable and limit attempts options (if once checked then unchecked)
* Fixed issue with uncompleted course even if unit elements (answer fields) were completed
* Fixed issue: Course Pre-Requisite still showing after required course completed
* Fixed theme translation issues
* Fixes issue with instructor profile pages when instructor username contains space

= 1.2.5 =
* Added additional hooks and filters for developers

= 1.2.4.9 =
* Fixed: Auto correcting previous student responses for Single- and Multiple Choice questions without needing to re-submit answers.
* This release improves the changes made in version 1.2.4.8.

= 1.2.4.8 =
* Fixed potential issue when using quotation marks or special characters in Single- and Multiple Choice questions.
* Fixes auto-grading of questions and mandatory questions reporting. (Note: Students may need to resubmit some responses)

= 1.2.4.7 =
* Recommended performance update. Significant improvements made (e.g. From 17s down to 0.56s using high volume test sample.)
* Progress tracking changed from course focused to student focused reducing database queries. Pages might load a fraction slower (up to 1s in testing) the first time old students accesses a course.
* Shortcode performance improvements
* Removing redundant CoursePress metadata from database
* Fixing unit layout issues resulting in HTML being displayed on the screen.

= 1.2.4.6 =
* Performance: When persistent object caching (server setup or 3rd party) is not available CoursePress will fall back to using transients to speed up page loads.
* Fixed: [course_join_button] now works properly on pages (bug caused it only to work on posts).
* Changed: [course_thumbnail] deprecated. Will revert to preferred [course_media type="thumbnail"] using the proper Course List image as thumbnail.
* Fixed: Required fields error for enrolment popup.