@@ -1430,7 +1430,7 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 //				}
 //				
 			?>
-			<!--				<img src="--><?php //echo $thumbnail;    ?><!--" class="course-thumbnail-img"></img>-->
+			<!--				<img src="--><?php //echo $thumbnail;      ?><!--" class="course-thumbnail-img"></img>-->
 			<!--				--><?php
 //				$content .= trim( ob_get_clean() );
 //
@@ -1492,6 +1492,14 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 				$show_page		 = $course->details->show_page_boxes;
 				$preview_page	 = $course->details->preview_page_boxes;
 
+				$current_time		 = date( 'Y-m-d', current_time( 'timestamp', 0 ) );
+				$course_start_date	 = $course->details->course_start_date;
+
+				$enable_links = false;
+				if ( $current_time >= $course_start_date ) {
+					$enable_links = true;
+				}
+
 				$units = $course->get_units();
 
 				$content .= '<div class="course-structure-block course-structure-block-' . $course_id . '">';
@@ -1529,7 +1537,7 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 											<label for="unit_<?php echo $unit->ID; ?>" class="course_structure_unit_label <?php echo $existing_student ? 'single_column' : ''; ?>">
 												<?php
 												$title = '';
-												if ( $existing_student ) {
+												if ( $existing_student && $enable_links ) {
 													$title = '<a href="' . $unit_permalink . '">' . $unit->post_title . '</a>';
 												} else {
 													$title = $unit->post_title;
@@ -1564,7 +1572,7 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 															<label for="page_<?php echo $unit->ID . '_' . $i; ?>">
 																<?php
 																$title		 = '';
-																if ( $existing_student ) {
+																if ( $existing_student && $enable_links ) {
 																	$p_title = isset( $page_title ) && $page_title !== '' ? $page_title : __( 'Untitled Page', 'cp' );
 																	$title	 = '<a href="' . trailingslashit( $unit_permalink ) . trailingslashit( 'page' ) . trailingslashit( $i ) . '">' . $p_title . '</a>';
 																} else {
@@ -2572,9 +2580,9 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 			<div class="submenu-main-container submenu-messaging">
 				<ul id="submenu-main" class="submenu nav-submenu">
 					<li class="submenu-item submenu-inbox <?php echo( isset( $subpage ) && $subpage == 'inbox' ? 'submenu-active' : '' ); ?>"><a href="<?php echo $coursepress->get_inbox_slug( true ); ?>"><?php
-			_e( 'Inbox', 'cp' );
-			echo $unread_count;
-			?></a></li>
+							_e( 'Inbox', 'cp' );
+							echo $unread_count;
+							?></a></li>
 					<li class="submenu-item submenu-sent-messages <?php echo( isset( $subpage ) && $subpage == 'sent_messages' ? 'submenu-active' : '' ); ?>"><a href="<?php echo $coursepress->get_sent_messages_slug( true ); ?>"><?php _e( 'Sent', 'cp' ); ?></a></li>
 					<li class="submenu-item submenu-new-message <?php echo( isset( $subpage ) && $subpage == 'new_message' ? 'submenu-active' : '' ); ?>"><a href="<?php echo $coursepress->get_new_message_slug( true ); ?>"><?php _e( 'New Message', 'cp' ); ?></a></li>
 				</ul><!--submenu-main-->
@@ -4202,37 +4210,37 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 			if ( $input_modules_count > 0 ) {
 				?>
 				<span class="unit-archive-single-module-status"><?php
-				if ( $unit_available ) {
-					if ( $mandatory_input_elements > 0 ) {
-						echo sprintf( $message, $mandatory_responses, $mandatory_input_elements );
+					if ( $unit_available ) {
+						if ( $mandatory_input_elements > 0 ) {
+							echo sprintf( $message, $mandatory_responses, $mandatory_input_elements );
+						}
+					} else {
+						if ( isset( $unit->status ) && $unit->status[ 'mandatory_required' ][ 'enabled' ] && !$unit->status[ 'mandatory_required' ][ 'result' ] && !$unit->status[ 'completion_required' ][ 'enabled' ] ) {
+							esc_html_e( 'All mandatory answers are required in previous unit.', 'cp' );
+						} elseif ( isset( $unit->status ) && $unit->status[ 'completion_required' ][ 'enabled' ] && !$unit->status[ 'completion_required' ][ 'result' ] ) {
+							esc_html_e( 'Previous unit must be completed successfully.', 'cp' );
+						}
+						if ( isset( $unit->status ) && !$unit->status[ 'date_restriction' ][ 'result' ] ) {
+							echo __( 'Available', 'cp' ) . ' ' . date_i18n( get_option( 'date_format' ), strtotime( do_shortcode( '[course_unit_details field="unit_availability"]' ) ) );
+						}
 					}
-				} else {
-					if ( isset( $unit->status ) && $unit->status[ 'mandatory_required' ][ 'enabled' ] && !$unit->status[ 'mandatory_required' ][ 'result' ] && !$unit->status[ 'completion_required' ][ 'enabled' ] ) {
-						esc_html_e( 'All mandatory answers are required in previous unit.', 'cp' );
-					} elseif ( isset( $unit->status ) && $unit->status[ 'completion_required' ][ 'enabled' ] && !$unit->status[ 'completion_required' ][ 'result' ] ) {
-						esc_html_e( 'Previous unit must be completed successfully.', 'cp' );
-					}
-					if ( isset( $unit->status ) && !$unit->status[ 'date_restriction' ][ 'result' ] ) {
-						echo __( 'Available', 'cp' ) . ' ' . date_i18n( get_option( 'date_format' ), strtotime( do_shortcode( '[course_unit_details field="unit_availability"]' ) ) );
-					}
-				}
-				?></span>
-				<?php } else { ?>
-				<span class="unit-archive-single-module-status"><?php
-				if ( $unit_available ) {
-//						 _e('Read-only');
-				} else {
-					if ( isset( $unit->status ) && $unit->status[ 'mandatory_required' ][ 'enabled' ] && !$unit->status[ 'mandatory_required' ][ 'result' ] && !$unit->status[ 'completion_required' ][ 'enabled' ] ) {
-						esc_html_e( 'All mandatory answers are required in previous unit.', 'cp' );
-					} elseif ( isset( $unit->status ) && $unit->status[ 'completion_required' ][ 'enabled' ] && !$unit->status[ 'completion_required' ][ 'result' ] ) {
-						esc_html_e( 'Previous unit must be completed successfully.', 'cp' );
-					}
-					if ( isset( $unit->status ) && !empty( $unit->status ) && !$unit->status[ 'date_restriction' ][ 'result' ] ) {
-						echo __( 'Available', 'cp' ) . ' ' . date_i18n( get_option( 'date_format' ), strtotime( do_shortcode( '[course_unit_details field="unit_availability"]' ) ) );
-					}
-				}
 					?></span>
-					<?php
+			<?php } else { ?>
+				<span class="unit-archive-single-module-status"><?php
+					if ( $unit_available ) {
+//						 _e('Read-only');
+					} else {
+						if ( isset( $unit->status ) && $unit->status[ 'mandatory_required' ][ 'enabled' ] && !$unit->status[ 'mandatory_required' ][ 'result' ] && !$unit->status[ 'completion_required' ][ 'enabled' ] ) {
+							esc_html_e( 'All mandatory answers are required in previous unit.', 'cp' );
+						} elseif ( isset( $unit->status ) && $unit->status[ 'completion_required' ][ 'enabled' ] && !$unit->status[ 'completion_required' ][ 'result' ] ) {
+							esc_html_e( 'Previous unit must be completed successfully.', 'cp' );
+						}
+						if ( isset( $unit->status ) && !empty( $unit->status ) && !$unit->status[ 'date_restriction' ][ 'result' ] ) {
+							echo __( 'Available', 'cp' ) . ' ' . date_i18n( get_option( 'date_format' ), strtotime( do_shortcode( '[course_unit_details field="unit_availability"]' ) ) );
+						}
+					}
+					?></span>
+				<?php
 			}
 			$content = ob_get_clean();
 			return $content;
@@ -4363,8 +4371,8 @@ if ( !class_exists( 'CoursePress_Shortcodes' ) ) {
 							$style = ( isset( $style ) && 'alternate' == $style ) ? '' : ' alternate';
 							?>
 							<tr id='user-<?php echo $user_object->ID; ?>' class="<?php
-						echo $style;
-						echo 'row-' . $current_row;
+							echo $style;
+							echo 'row-' . $current_row;
 							?>">
 
 								<?php
